# matter-compressor

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  renderbench.yml  s3-bench.yml
bench/: RESULTS.md  baseline.txt  final_v3.3.txt  render_bench.c  v2.1_paris4_masked.txt  v2.2_priors.txt  v2_blockmask.txt  v3.1_sor_steptab.txt  v3.2_subcube_mask.txt  v3.3_hdr_in_stream.txt  v3_entropy.txt
build_cov/: coverage.lcov  coverage.txt  merged.profdata  summary.md  zarr.mca
build_cov/fixture/zarr/0/: .zarray  0.0.0  0.0.1  0.1.0  0.1.1  1.0.0  1.0.1  1.1.0  1.1.1
build_cov/fixture/zarr/1/: 0.0.0
build_cov/fixture/zarr/2/: .zarray  0.0.0
build_cov/html/: index.html
build_cov/html/coverage/home/forrest/matter-compressor/src/: matter_compressor.c.html
build_cov/prof/: mc_api_test.profraw  mc_append_roundtrip.profraw  mc_archive_concurrent_test.profraw  mc_cache_test.profraw  mc_render_test.profraw  mc_roundtrip.profraw  mc_stream_partial.profraw  mc_stream_volume_test.profraw  mc_v6_test.profraw  mc_volume_offline_test.profraw  mc_volume_test.profraw  mc_zarr_test.profraw
build_native/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  mc_append_roundtrip  mc_roundtrip
cmake/: homebrew-llvm.cmake
docs/: c3g_format.md  gpu_volume_render.md  mc_volume_design.md
scripts/: bench.sh  coverage.sh  fuzz.sh
src/: matter_compressor.c  matter_compressor.h  mc_archive.c  mc_archive.h  mc_archive_api.h  mc_archive_read.h  mc_cache.c  mc_cache.h  mc_codec.c  mc_codec.h  mc_codec_float.h  mc_dct.h  mc_rangecoder.h  mc_rans_tab.h  mc_render.c  mc_render.h  mc_sample.c  mc_sample.h  mc_sample_internal.h  mc_segment.c  mc_segment.h  mc_solve.c  mc_solve.h  mc_stream.c  mc_surface.c  mc_surface.h  mc_tiff.c  mc_tiff.h  mc_trace.c  mc_trace.h  mc_volume.c  mc_volume.h  mc_zarr.c  mc_zarr.h
tests/: mc_api_test.c  mc_append_roundtrip.c  mc_archive_concurrent_test.c  mc_archive_errpaths_test.c  mc_c3g_archive_test.c  mc_c3g_test.c  mc_cache_test.c  mc_decode_robust_test.c  mc_det_archive.c  mc_node_align_test.c  mc_render_test.c  mc_roundtrip.c  mc_s3_volume_test.c  mc_segment_test.c  mc_solve_test.c  mc_stream_partial.c  mc_stream_volume_api_test.c  mc_surface_robust_test.c  mc_surface_test.c  mc_tiff_robust_test.c  mc_tiff_test.c  mc_trace_test.c  mc_v6_test.c  mc_volume_api_test.c  mc_volume_offline_test.c  mc_volume_test.c  mc_volume_v3_test.c  mc_zarr_test.c
tests/fuzz/: FINDINGS.md  hardening.patch.md  mc_fuzz_block.c  mc_fuzz_block_seed.c  mc_fuzz_decode.c  mc_fuzz_seed.c  mc_fuzz_segment.c  mc_fuzz_segment_seed.c  mc_fuzz_surface.c  mc_fuzz_surface_seed.c  mc_fuzz_tiff.c  mc_fuzz_tiff_seed.c
tests/fuzz/crashes/surface/: vcps_dim_overflow.ppm
tests/fuzz/crashes/tiff/: ifd_off_overflow.tif  zero_width.tif
tests/support/: mc_make_fixture.c  mc_make_fixture_blosc.c  mc_make_fixture_v3.c
tools/: mc_bench.c  mc_detect.c  mc_export.c  mc_fetch.c  mc_grid.c  mc_klt.c  mc_mask.c  mc_microbench.c  mc_prof.c  mc_rans_probe.c  mc_rans_tab.c  mc_segbench.c  mc_stream_probe.c  mc_surface_render.c  mc_trace.c  mc_train.c  mc_verify.c  mc_vs_c3d.c
tools/mc_sview/: mc_sview.c
tools/mc_viewer/: CMakeLists.txt  README.md  c3g_gpu_check.c  mc_gpu.h  mc_gpu_brick.h  mc_gpu_ray.h  mc_gpu_vol.h  mc_viewer.c  nk_sdl3.h  nuklear_impl.c  ray_gpu_check.c  vol_gpu_check.c
tools/mc_viewer/shaders/: blit.frag.glsl  blit.frag.spv.h  blit.vert.glsl  blit.vert.spv.h  c3g_decode.comp.glsl  c3g_decode.comp.spv.h  c3g_decode3d.comp.glsl  c3g_decode3d.comp.spv.h  raycast.frag.glsl  raycast.frag.spv.h  raycast.vert.glsl  raycast.vert.spv.h  raycast_brick.frag.glsl  raycast_brick.frag.spv.h  ui.frag.glsl  ui.frag.spv.h  ui.vert.glsl  ui.vert.spv.h  vol.vert.glsl  vol.vert.spv.h  vol_slice.frag.glsl  vol_slice.frag.spv.h
